@@ -1,5 +1,6 @@
 7.2.1
  - Deprecated `namedclass`.
+ - Internal rework of `field::to()` and `field::as()` functions.
 7.2.0
  - You can now implicitly convert a `const std::string &` to `zview`.
  - Replaced some overloads for C strings and C++ strings with `zview`.
